# L05-cpp-acceleration

./: .gitignore  LICENSE  README.md  README_zh-CN.md  __init__.py  assmanager.py  config.ini  main.py  setup.py  template.ini
DA/: EnKF.py  ensembleFilter.py
assmanager/: __init__.py  assmanager.py  config.ini  datagen.py  demo.py  postprocess.py  result.out  result_reader.py  template.ini
assmanager/filter/: EnKF.py  EnSRF.py  __init__.py  ensembleFilter.py
assmanager/filter/acc/: cpu.cpp  test.py
assmanager/mlruns/0/: meta.yaml
assmanager/model/: Lorenz05.py  Lorenz05_cpu_parallel.py  Lorenz05_gpu.py  Lorenz05_unet.py  __init__.py  cpp.txt  python.txt  test_parallel_advance.py
assmanager/model/step_L04/: __init__.py  cpu.cpp  gpu.cpp  gpu.cu  gpu.hpp  test.py
assmanager/model/step_L04/cpu_parallel/: Makefile  cpu_parallel.cpp  threadpool.hpp
assmanager/model/step_L04/gpu/: CMakeLists.txt  gpu.cpp  gpu.cu  makefile
assmanager/model/unet/: Unet.py  __init__.py
filter/: EnKF.py  EnSRF.py  ensembleFilter.py
model/: Lorenz05.py
utils/: construct_GC_2d.py
